로그인, 이메일 유효성검사 추가
+ 인증메일 시간초과 후 발생오류 수정

--- a/src/main/resources/static/css/jk/seller.css
+++ b/src/main/resources/static/css/jk/seller.css
@@ -398,6 +398,8 @@ ul {
     --bs-pagination-disabled-border-color: #dee2e6;
 }
 
+
+
 .datatable-pagination a {
     color: var(--bs-pagination-color);
     display: block;
@@ -454,4 +456,8 @@ ul {
 .footer {
     position: absolute;
     bottom: 0;
+}
+
+#sidebarToggle {
+    color: #052c65; 
 }
