--- a/src/main/resources/templates/jk/seller/mypage/updatepw.html
+++ b/src/main/resources/templates/jk/seller/mypage/updatepw.html
@@ -163,7 +163,7 @@
             }
             else if (pw.value == pw1.value) {
                 document.getElementById("companyNewPwChk").innerText = "암호가 일치합니다.";
-                document.getElementById("companyNewPwChk").style.color = 'blue';
+                document.getElementById("companyNewPwChk").style.color = '#5e89ef';
                 document.getElementById("okbutton").className = "btn btn-dark";
             }
         }
