--- a/src/main/resources/static/css/jk/seller_loginStyle.css
+++ b/src/main/resources/static/css/jk/seller_loginStyle.css
@@ -14,7 +14,10 @@ body {
 
 }
 
-body > div {
+
+
+
+body>div {
     width: 560px;
     margin: 0 auto;
     padding: 45px;
@@ -32,7 +35,7 @@ body > div {
     color: #0b3b63;
 }
 
-.btn-dark{
+.btn-dark {
     border-color: #ffffff;
     background-color: #0b3b63;
 }
@@ -53,12 +56,20 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox  */
-input[type='number'] {
+/* input[type='number'] {
     -moz-appearance: textfield;
-}
+} */
 /*------------------------------------------------------*/
 
 .footer {
     position: absolute;
     bottom: 0;
-  }
+}
+
+/* 이메일 인증 버튼 크기 조절용 */
+.input-group>:not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
+    margin-left: calc(var(--bs-border-width) * -1);
+    border-top-left-radius: 0;
+    width: 110px;
+    border-bottom-left-radius: 0;
+}
