--- a/src/main/resources/templates/jk/seller/join.html
+++ b/src/main/resources/templates/jk/seller/join.html
@@ -55,9 +55,9 @@
                         </div>
                     </div>
                     <div class="form-floating mb-2">
-                        <input type="text" id="verificationCode" name="verificationCode" class="form-control"
-                            hidden />
-                        <label for="verificationCode" id="lbl_verificationCode" class="form-label" hidden>이메일 인증 코드</label>
+                        <input type="text" id="verificationCode" name="verificationCode" class="form-control" hidden />
+                        <label for="verificationCode" id="lbl_verificationCode" class="form-label" hidden>이메일 인증
+                            코드</label>
                     </div>
 
                     <div class="container text-center d-grid gap-2" style="padding: 0;">
@@ -134,8 +134,8 @@
             };
 
 
-            if (id.value.length < 10) { // 사업자번호가 10자리인지
-                alert("사업자번호가 너무 짧습니다. 다시 확인해주세요.");
+            if (id.value.length != 10) { // 사업자번호가 10자리인지
+                alert("사업자번호가 10자리인지 확인해주세요.");
                 id.focus();
                 return false;
             };
@@ -246,7 +246,7 @@
             }
             else {
                 document.getElementById("lbl_pwCheck").innerText = "암호가 일치합니다.";
-                document.getElementById("lbl_pwCheck").style.color = 'blue';
+                document.getElementById("lbl_pwCheck").style.color = '#5e89ef';
             }
         }
 
@@ -340,7 +340,7 @@
         }
 
         function startTimer() {
-            var duration = 180; // 타이머는 3분
+            var duration = 20; // 타이머는 기본 2분
             var timer = duration, minutes, seconds;
             timerInterval = setInterval(function () {
                 minutes = parseInt(timer / 60, 10);
@@ -354,8 +354,10 @@
                 if (--timer < 0) { // 타이머 시간 종료시
                     clearInterval(timerInterval); // 다시 처음상태로 되돌아감.
                     document.getElementById("emailVerificationBtn").disabled = false;
-                    document.getElementById("verificationCode").disabled = true;
-                    document.getElementById("lbl_verificationCode").textContent = "이메일 인증 코드";
+                    document.getElementById("verificationCode").hidden = true; // 인증코드 입력칸 비활성화
+                    document.getElementById("verificationCode").value = null; // 인증코드 입력칸 값 초기화 (null)
+                    document.getElementById("verButton").hidden = true; // 인증버튼 비활성화
+                    document.getElementById("lbl_verificationCode").hidden = true; // 인증입력칸 라벨 비활성화
                     document.getElementById("email").readOnly = false;
 
                     verificationCodeEnabled = false;
@@ -378,14 +380,19 @@
             if (data.chk === 0) { // 이메일값이 없을때 전송이 안되도록.
                 alert("인증번호가 일치하지 않습니다.")
                 return false;
-            } else if (data.chk === 1) {
+            } else if (data.chk === 1) { // 인증 완료시
                 alert("인증이 완료되었습니다.")
                 checkCode = 1;
                 code.disabled = true;
                 clearInterval(timerInterval);
+                document.getElementById("verificationCode").hidden = true; // 인증코드 입력칸 비활성화
+                document.getElementById("verButton").hidden = true; // 인증버튼 비활성화
+                document.getElementById("lbl_verificationCode").hidden = true; // 인증입력칸 라벨 비활성화
+                document.getElementById("emailVerificationBtn").textContent = "인증 성공";
                 document.getElementById("lbl_verificationCode").textContent = "인증이 완료되었습니다.";
-                document.getElementById("lbl_verificationCode").style.color = 'blue';
+                document.getElementById("lbl_verificationCode").style.color = '#5e89ef';
                 document.getElementById("verButton").disabled = true;
+                document.getElementById("verButton").value = "인증완료";
             }
         }
 
